# chatgpt-clone

./: .checkov.yaml  .gitignore  .ls-lint.yml  .markdownlint.json  .rumdl.toml  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  README.qmd  backend.mk  chatbot-template.Rproj  chatgpt-clone.code-workspace  codecov.yml  commitlint.config.mjs  docker-compose.yml  frontend.mk  mypy.ini  prek.toml  tox.ini
.agents/skills/frontend-pr-screenshot/: SKILL.md
.claude/skills/: frontend-pr-screenshot
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/workflows/: docker-compose.yml  prek.yaml  qa.yml  security.yml  tests.yml
backend/: Dockerfile  locustfile.py  pyproject.toml
backend/api-manual-testing/: gpt-4o.sh
backend/app/: __init__.py  azure_client.py  config.py  main.py
backend/tests/: conftest.py  test_azure_client.py  test_config.py  test_main.py
client/: package-lock.json  package.json  tsconfig.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/components/: ChatInput.tsx  ChatMessage.tsx  TemperatureSelector.tsx
code-quality-evals/: gpt-55-review.md  opus-47-review.md  sonnet-46-review.md
frontend/: .dockerignore  .eslintrc.json  .fallowrc.json  .lighthouserc.json  Dockerfile  biome.json  eslint.config.js  eslint.config.mjs  index.html  jest.config.ts  logger.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/app/: external-api.ts  layout.tsx  page.ts  page.tsx  styles.css
frontend/app/chat/: page.test.tsx  page.tsx
frontend/app/components/: ChatMessage.tsx
frontend/client/: AssistantClient.test.ts  AssistantClient.ts  ChatClient.ts  helpers.test.ts  helpers.ts  hooks.test.tsx  hooks.ts
frontend/client/hooks/: useAssistantResponse.ts  useChatResponse.ts
frontend/client/types/: assistant.test.ts  assistant.ts
frontend/components/messages/: AssistantMessage.test.tsx  AssistantMessage.tsx  ChatInput.test.tsx  ChatInput.tsx  ChatMessage.tsx  UserMessage.test.tsx  UserMessage.tsx
frontend/components/messages/__snapshots__/: AssistantMessage.test.tsx.snap  ChatInput.test.tsx.snap  UserMessage.test.tsx.snap
frontend/components/parameters/: AssistantModelParameter.tsx  AssistantParameters.tsx  AssistantTemperatureParameter.tsx  DropdownParameter.test.tsx  DropdownParameter.tsx  ModelSelector.tsx  TemperatureSelector.tsx
frontend/e2e-tests/: chat-page.spec.ts  visual.spec.ts
frontend/scripts/: css-quality.mjs
frontend/server/: external-api.ts
frontend/src/: main.tsx
frontend/tests/: chat-page.spec.ts
makefiles/: backend.mk  frontend.mk
server/: .env.example  Dockerfile  locustfile.py  mypy.ini  pyproject.toml  schema.yml
server/api-manual-testing/: gpt-4o-mini.py  gpt-4o.sh
server/api-testing-with-thunder-client/: gpt-4o-mini.py  gpt-4o.py  gpt-4o.sh
server/app/: azure_client.py  config.py  entities.py  main.py
server/chatgptserver/: asgi.py  conftest.py  manage.py  pytest.ini  settings.py  tests.py  urls.py  views.py  wsgi.py
server/chatgptserver/api/: __init__.py  azure_client.py  entities.py  logging_config.py  pytest.ini  serializers.py  tests.py  urls.py  utils.py  views.py
server/chatgptserver/api/tests/: __init__.py  test_azure_client.py  test_views.py
server/chatgptserver/chatgptserver/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
server/tests/: test_azure_client.py  test_main.py
