[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.4.0",
    "django-stubs>=5.1.0",
    "django>=5.1.1",
    "djangorestframework>=3.15.2",
    "openai>=1.51.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["D100"]
