[project]
name = "server"
version = "0.1.0"
description = "FastAPI backend service for streaming Azure OpenAI GPT-4o responses."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "loguru>=0.7.2",
    "openai>=2.33.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "add-trailing-comma>=4.0.0",
    "coverage>=7.6.7",
    "crosszip>=1.0.0",
    "locust>=2.32.0",
    "prek>=0.3.10",
    "pytest-random-order>=1.1.1",
    "pytest>=8.3.3",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.uv]
required-version = ">=0.11.2"

[tool.ruff]
fix = true
preview = true
unsafe-fixes = true
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "CPY", "D", "DOC"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    # tests can have asserts
    "S101",
    # magic values in assertions are fine
    "PLR2004",
    # parametrized tests naturally have many arguments
    "PLR0913",
    "PLR0917",
    # fixtures used for side effects don't need to be referenced
    "ARG001",
    # `== ""` assertions are intentionally explicit
    "PLC1901",
    # long expected-value strings in parametrize are unavoidable
    "E501",
]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ty.src]
exclude = [".venv", "build", "dist"]

[tool.ty.environment]
python-version = "3.14"

[tool.coverage.run]
omit = [
    # FastAPI wires this through OpenAPI and smoke tests.
    "app/main.py",
]

[tool.pytest.ini_options]
addopts = [
    # error on using unregistered marker
    "--strict-markers",
    # show extra test summary info for everything
    "-ra",
]
xfail_strict = true
python_files = ["test_*.py", "test-*.py", "tests.py", "test.py"]
